<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_add_stamp">Add Stamp</string>
    <string name="accessibility_button">%s Button</string>
    <string name="accessibility_cancel">Cancel</string>
    <string name="accessibility_cash_card_preview">Cash Card Preview</string>
    <string name="accessibility_clear">Clear Customization</string>
    <string name="accessibility_customization_settings">Customization Settings</string>
    <string name="accessibility_done">Done</string>
    <string name="accessibility_draw_mode">Draw Mode</string>
    <string name="accessibility_fingerprint_dialog_help_area">Help message area</string>
    <string name="accessibility_undo">Undo</string>
    <string name="action_bar_back">Back</string>
    <string name="action_bar_close">Close</string>
    <string name="action_bar_flash_off">Flash Toggle: Flash is Off</string>
    <string name="action_bar_flash_on">Flash Toggle: Flash is On</string>
    <string name="action_bar_help">Help</string>
    <string name="activity_contact_block">Block Person</string>
    <string name="activity_contact_blocked">You blocked %s</string>
    <string name="activity_contact_empty_view_button">Get Cash Card</string>
    <string name="activity_contact_empty_view_message">This is where you will see your activity at %s</string>
    <string name="activity_contact_empty_view_title">No Activity Yet</string>
    <string name="activity_contact_stats_average">Average</string>
    <string name="activity_contact_stats_boost">Saved</string>
    <string name="activity_contact_stats_entity_invested">Invested</string>
    <string name="activity_contact_stats_entity_purchased">Purchased</string>
    <string name="activity_contact_stats_entity_sold">Sold</string>
    <string name="activity_contact_stats_entity_trades_dividends">Trades/Dividends</string>
    <string name="activity_contact_stats_payment">Payment</string>
    <string name="activity_contact_stats_payments">Payments</string>
    <string name="activity_contact_stats_received">Received</string>
    <string name="activity_contact_stats_sent">Sent</string>
    <string name="activity_contact_stats_spent">Spent</string>
    <string name="activity_contact_unblock">Unblock Person</string>
    <string name="activity_list_header_activity">ACTIVITY</string>
    <string name="activity_list_header_completed">COMPLETED</string>
    <string name="activity_list_header_loyalty_rewards">REWARDS</string>
    <string name="activity_list_header_numbered_contacts">%d CONTACTS</string>
    <string name="activity_list_header_numbered_transactions">%d TRANSACTIONS</string>
    <string name="activity_list_header_pending">PENDING</string>
    <string name="activity_list_header_single_contact">1 CONTACT</string>
    <string name="activity_list_header_single_transaction">1 TRANSACTION</string>
    <string name="activity_list_header_upcoming">UPCOMING</string>
    <string name="activity_list_search_cancel_item">Cancel</string>
    <string name="activity_list_search_hint">Search Activity for…</string>
    <string name="activity_loyalty_info_button">More Info</string>
    <string name="activity_loyalty_rewards_title">All Rewards</string>
    <string name="activity_loyalty_unit_earned" formatted="false">%d %s Earned</string>
    <string name="activity_loyalty_view_all_rewards">View All Rewards</string>
    <string name="activity_pending_card_transactions_rollup_title">%s Pending Card Transactions</string>
    <string name="activity_pending_investment_order_rollup_title">%s Investing Orders</string>
    <string name="activity_pending_referral_rollup_action">+%s</string>
    <string name="activity_pending_referral_rollup_subtitle">For %s People</string>
    <string name="activity_pending_referral_rollup_title">Invitation Bonus</string>
    <string name="activity_report_abuse_block">Block</string>
    <string name="activity_report_abuse_body">This action will cancel all pending transactions and block their ability to send or request money from you.</string>
    <string name="activity_report_abuse_cancel">Cancel</string>
    <string name="activity_report_abuse_title">Block %s?</string>
    <string name="activity_report_abuse_title_no_name">Block this customer?</string>
    <string name="activity_tab_action_search">Search</string>
    <string name="activity_tab_action_settings">Settings</string>
    <string name="activity_unreport_abuse_body">Would you like to unblock this person?</string>
    <string name="activity_unreport_abuse_cancel">Cancel</string>
    <string name="activity_unreport_abuse_title">Unblock %s?</string>
    <string name="activity_unreport_abuse_title_no_name">Unblock this customer?</string>
    <string name="activity_unreport_abuse_unblock">Unblock</string>
    <string name="add_cash_title">Add Cash</string>
    <string name="agree">Agree</string>
    <string name="amount_selection_customize">･･･</string>
    <string name="amount_selection_sell_all">Sell All</string>
    <string name="app_launcher_label">Cash App</string>
    <string name="app_message_change_passcode_invalid">Cash PIN was already removed and cannot be changed.</string>
    <string name="app_message_create_passcode_invalid">Cash PIN was already created.</string>
    <string name="app_messages_options_ringtone_title">Sound</string>
    <string name="app_name">Cash App</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="at_city_hint">City</string>
    <string name="at_city_invalid_au">Invalid input for City, State Postcode</string>
    <string name="at_city_invalid_ca">Invalid input for City, Province Postal Code</string>
    <string name="at_city_invalid_gb">Invalid input for City, Postcode</string>
    <string name="at_city_invalid_us">Invalid input for City, State Zip</string>
    <string name="at_code_hint_au">Postcode</string>
    <string name="at_code_hint_ca">Postal Code</string>
    <string name="at_code_hint_gb">Postcode</string>
    <string name="at_code_hint_us">Zip</string>
    <string name="at_hint">Address</string>
    <string name="at_state_hint_au">State</string>
    <string name="at_state_hint_ca">Province</string>
    <string name="at_state_hint_us">State</string>
    <string name="at_street_address_error">Your street address is required</string>
    <string name="at_street_address_hint_line_1">Address Line 1</string>
    <string name="blockers_verify_help_call">Call me instead</string>
    <string name="blockers_verify_help_edit_email">Edit email address</string>
    <string name="blockers_verify_help_edit_sms">Edit phone number</string>
    <string name="blockers_verify_help_resend">Resend code</string>
    <string name="blockers_verify_help_skip">Skip</string>
    <string name="cancel">Cancel</string>
    <string name="notification_options_light">Notification light</string>
    <string name="notification_options_section">OPTIONS</string>
    <string name="notification_options_title_payment">Payment Notifications</string>
    <string name="notification_options_vibrate">Vibrate</string>
    <string name="payment_notification_options_ringtone_title_bill">Incoming request</string>
    <string name="payment_notification_options_ringtone_title_cash">Cash deposited</string>
    <string name="payment_notification_options_ringtone_title_other">Updates &amp; reminders</string>
    <string name="payment_notification_options_section_ringtones">SOUNDS</string>
    <string name="profile_account_info_address_hint">Add Address</string>
    <string name="profile_avatar_clear_photo">Remove Photo</string>
    <string name="profile_avatar_edit_cashtag">Edit %sCashtag</string>
    <string name="profile_avatar_edit_name">Edit Name</string>
    <string name="profile_avatar_existing_photo">Choose Existing Photo</string>
    <string name="profile_avatar_take_photo">Take New Photo</string>
    <string name="profile_balance_deposit_preference">Auto Cash Out</string>
    <string name="profile_balance_deposit_preference_description">Deposit funds directly to my bank account</string>
    <string name="profile_cash_app_title">Cash.app</string>
    <string name="profile_change_passcode">Change Cash PIN</string>
    <string name="profile_documents_title">Documents</string>
    <string name="profile_downgrade">Change to Personal Account</string>
    <string name="profile_help_tab_title">Support</string>
    <string name="profile_incoming_requests_description">Allow others to request money from me</string>
    <string name="profile_incoming_requests_header">REQUESTS</string>
    <string name="profile_incoming_requests_title">Incoming Requests</string>
    <string name="profile_notifications_title">Notifications</string>
    <string name="profile_personal_title">Personal</string>
    <string name="profile_privacy_and_security_title">Privacy &amp; Security</string>
    <string name="profile_pro_upgrade">Change Account Type</string>
    <string name="profile_scheduled_payments_button_label">Scheduled Payments</string>
    <string name="profile_section_account_type">ACCOUNT TYPE</string>
    <string name="profile_section_address">ADDRESS</string>
    <string name="profile_section_aliases">YOUR INFO</string>
    <string name="profile_section_bio">BIO</string>
    <string name="profile_section_bio_hint">Add Bio</string>
    <string name="profile_section_country">COUNTRY</string>
    <string name="profile_section_security">SECURITY</string>
    <string name="recurring_transfer_amount">Amount</string>
    <string name="recurring_transfer_default_value">OFF</string>
    <string name="recurring_transfer_frequency">Frequency</string>
    <string name="recurring_transfer_preference">Auto Add Cash</string>
    <string name="recurring_transfer_preference_description">Automatically add funds to the Cash App from %s</string>
    <string name="ringtone_picker_negative">Cancel</string>
    <string name="ringtone_picker_positive">OK</string>
    <string name="ringtone_picker_title">Sounds</string>
    <string name="section_deposits_header">DEPOSITS</string>
    <string name="section_recurring_header">RECURRING</string>
</resources>