<?xml version="1.0" encoding="utf-8"?>
<com.squareup.cash.profile.views.ProfileHeaderMenuSheet android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/Widget.Cash.Bottomsheet"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/clear_photo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/profile_avatar_clear_photo" />
    <Button android:id="@id/take_photo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/profile_avatar_take_photo" />
    <Button android:id="@id/existing_photo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/profile_avatar_existing_photo" />
    <Button android:id="@id/edit_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/profile_avatar_edit_name" />
    <Button android:id="@id/edit_cashtag" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/profile_avatar_edit_cashtag" />
    <Button android:id="@id/cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" />
</com.squareup.cash.profile.views.ProfileHeaderMenuSheet>