<?xml version="1.0" encoding="utf-8"?>
<com.squareup.cash.profile.views.PaymentNotificationOptionsView android:orientation="vertical" android:background="?android:windowBackground" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:navigationContentDescription="@string/action_bar_close" app:navigationIcon="?actionBarCloseIcon" app:title="@string/notification_options_title_payment" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/profile_footer_buttons_margin_bottom" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/payment_notification_options_section_ringtones" style="@style/Widget.Cash.SectionHeader" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/Widget.Cash.Profile.Section">
                <com.squareup.cash.profile.views.BasicSettingView android:id="@id/ringtone_cash" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/payment_notification_options_ringtone_title_cash" />
                <com.squareup.cash.profile.views.BasicSettingView android:id="@id/ringtone_bill" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/payment_notification_options_ringtone_title_bill" />
                <com.squareup.cash.profile.views.BasicSettingView android:id="@id/ringtone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/payment_notification_options_ringtone_title_other" />
            </LinearLayout>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/notification_options_section" style="@style/Widget.Cash.SectionHeader" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/Widget.Cash.Profile.Section">
                <com.squareup.cash.ui.widget.SwitchSettingView android:id="@id/vibrate" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/notification_options_vibrate" />
                <com.squareup.cash.ui.widget.SwitchSettingView android:id="@id/light" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/notification_options_light" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</com.squareup.cash.profile.views.PaymentNotificationOptionsView>