<?xml version="1.0" encoding="utf-8"?>
<com.squareup.cash.profile.views.ProfileSettingsSection android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.squareup.cash.profile.views.ProfileSettingsSectionRow android:id="@id/account" android:layout_width="fill_parent" android:layout_height="@dimen/profile_settings_section_row_height" android:text="@string/profile_personal_title" app:drawableSrc="@drawable/settings_tab_account" />
    <com.squareup.cash.profile.views.ProfileSettingsSectionRow android:id="@id/help" android:layout_width="fill_parent" android:layout_height="@dimen/profile_settings_section_row_height" android:text="@string/profile_help_tab_title" app:drawableSrc="@drawable/settings_tab_help" />
    <com.squareup.cash.profile.views.ProfileSettingsSectionRow android:id="@id/security" android:layout_width="fill_parent" android:layout_height="@dimen/profile_settings_section_row_height" android:text="@string/profile_privacy_and_security_title" app:drawableSrc="@drawable/settings_tab_privacy" />
    <com.squareup.cash.profile.views.ProfileSettingsSectionRow android:id="@id/scheduled" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/profile_settings_section_row_height" android:text="@string/profile_scheduled_payments_button_label" app:drawableSrc="@drawable/calendar_icon" />
    <com.squareup.cash.profile.views.ProfileSettingsSectionRow android:id="@id/notifications" android:layout_width="fill_parent" android:layout_height="@dimen/profile_settings_section_row_height" android:text="@string/profile_notifications_title" app:drawableSrc="@drawable/settings_tab_notifications" />
    <com.squareup.cash.profile.views.ProfileSettingsSectionRow android:id="@id/documents" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/profile_settings_section_row_height" android:text="@string/profile_documents_title" app:drawableSrc="@drawable/settings_documents" />
</com.squareup.cash.profile.views.ProfileSettingsSection>